src/objects/Toxicity_Master__c.object
<CustomObject>
    <fields>
        <fullName>CTCAE_v4_0_AE_Term_Definition__c</fullName>
        <label>CTCAE v4.0 AE Term Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade_1__c</fullName>
        <label>Grade 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade_2__c</fullName>
        <label>Grade 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade_3__c</fullName>
        <label>Grade 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedDRA_v12_0_Code__c</fullName>
        <label>MedDRA v12.0 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Master__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Symptom Master</label>
        <referenceTo>SymptomMaster__c</referenceTo>
        <relationshipLabel>Toxicity Masters</relationshipLabel>
        <relationshipName>Toxicity_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxicity_Name__c</fullName>
        <label>Toxicity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Toxicity Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Symptom_Master__c</columns>
        <columns>Toxicity_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Toxicity Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toxicity Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>